// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`text.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo = foo\`\\u{prettier}\\u{0065}\`;
foo = html\`\\u{prettier}\\u{0065}\`;
foo = graphql\`\\u{prettier}\\u{0065}\`;
foo = markdown\`\\u{prettier}\\u{0065}\`;
foo = css\`\\u{prettier}\\u{0065}\`;
foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;

foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = html\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = graphql\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = markdown\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = css\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* HTML */\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* GraphQL */\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* HTML */\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* GraphQL */\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* HTML */\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* GraphQL */\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;

=====================================output=====================================
foo = foo\`\\u{prettier}\\u{0065}\`;
foo = html\`\\u{prettier}\\u{0065}\`;
foo = graphql\`\\u{prettier}\\u{0065}\`;
foo = markdown\`\\u{prettier}\\u{0065}\`;
foo = css\`\\u{prettier}\\u{0065}\`;
foo = /* HTML */ \`\\u{prettier}\\u{0065}\`;
foo = /* GraphQL */ \`\\u{prettier}\\u{0065}\`;

foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = html\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = graphql\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = markdown\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = css\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* HTML */ \`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
foo = /* GraphQL */ \`\\u{prettier}\${foo}pr\\u{0065}ttier\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* HTML */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\`;
foo = /* GraphQL */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\`;

foo = foo\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = html\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = graphql\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = markdown\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = css\`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* HTML */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;
foo = /* GraphQL */ \`pr\\u{0065}ttier\${foo}\\u{prettier}\${bar}pr\\u{0065}ttier\`;

================================================================================
`;

exports[`text.js format[acorn] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
Cause: Bad escape sequence in untagged template literal (6:17)"
`;

exports[`text.js format[espree] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
Cause: Bad escape sequence in untagged template literal"
`;

exports[`text.js format[flow] 1`] = `
"Unexpected token ILLEGAL (1:12)
> 1 | foo = foo\`\\u{prettier}\\u{0065}\`;
    |            ^
  2 | foo = html\`\\u{prettier}\\u{0065}\`;
  3 | foo = graphql\`\\u{prettier}\\u{0065}\`;
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
Cause: Unexpected token ILLEGAL (1:11)"
`;

exports[`text.js format[hermes] 1`] = `
"untagged template literal contains invalid escape sequence (6:17)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                 ^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
Cause: untagged template literal contains invalid escape sequence (6:16)
foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
                ^~~~~~~~~~~~~~~~~~~~~~"
`;

exports[`text.js format[meriyah] 1`] = `
"Invalid hexadecimal escape sequence (6:17)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                 ^^^^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
Cause: [6:16-6:20]: Invalid hexadecimal escape sequence"
`;

exports[`text.js format[oxc] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^^^^^^^^^^^^^^^^^^^^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;"
`;

exports[`text.js format[oxc-ts] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^^^^^^^^^^^^^^^^^^^^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;"
`;

exports[`text.js format[typescript] 1`] = `
"Hexadecimal digit expected. (6:21)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                     ^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;
Cause: Hexadecimal digit expected."
`;

exports[`text.js format[yuku] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^^^^^^^^^^^^^^^^^^^^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;"
`;

exports[`text.js format[yuku-ts] 1`] = `
"Bad escape sequence in untagged template literal (6:18)
  4 | foo = markdown\`\\u{prettier}\\u{0065}\`;
  5 | foo = css\`\\u{prettier}\\u{0065}\`;
> 6 | foo = /* HTML */\`\\u{prettier}\\u{0065}\`;
    |                  ^^^^^^^^^^^^^^^^^^^^
  7 | foo = /* GraphQL */\`\\u{prettier}\\u{0065}\`;
  8 |
  9 | foo = foo\`\\u{prettier}\${foo}pr\\u{0065}ttier\`;"
`;
